--- a/packages/bedroom-ros/scripts/hue-scene.yaml
+++ b/packages/bedroom-ros/scripts/hue-scene.yaml
@@ -2,20 +2,20 @@ hue_bedroom_ros_off:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.bedroom_ros_select
+        entity_id: input_select.bedroom_ros_mode
         option: "Off"
 
 hue_bedroom_ros_sleep:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.bedroom_ros_select
+        entity_id: input_select.bedroom_ros_mode
         option: "Sleep"
 
 hue_bedroom_ros_cosy:
     sequence:
     - service: input_select.select_option
       data:
-        entity_id: input_select.bedroom_ros_select
+        entity_id: input_select.bedroom_ros_mode
         option: "Cosy"
 
