--- a/packages/study/homeassistant.yaml
+++ b/packages/study/homeassistant.yaml
@@ -27,8 +27,10 @@ customize:
 
   script.hue_study_off:
     friendly_name: "Study"
+  script.hue_study_cosy:
+    friendly_name: "Study Mode Cosy"
+  script.hue_study_bright:
+    friendly_name: "Study Mode Bright"
   script.hue_study_work:
-    friendly_name: "Study Mood Work"
-  script.hue_study_relax:
-    friendly_name: "Study Mood Relax"
+    friendly_name: "Study Mode Work"
 
