--- a/packages/lounge/homeassistant.yaml
+++ b/packages/lounge/homeassistant.yaml
@@ -22,9 +22,9 @@ customize:
   script.hue_lounge_off:
     friendly_name: "Lounge"
   script.hue_lounge_cosy:
-    friendly_name: "Lounge Mood Cosy"
-  script.hue_lounge_movie:
-    friendly_name: "Lounge Mood Movie"
+    friendly_name: "Lounge Mode Cosy"
   script.hue_lounge_bright:
-    friendly_name: "Lounge Mood Bright"
+    friendly_name: "Lounge Mode Bright"
+  script.hue_lounge_movie:
+    friendly_name: "Lounge Mode Movie"
 
