--- a/switches/rfxtrx_switches.yaml
+++ b/switches/rfxtrx_switches.yaml
@@ -14,10 +14,10 @@
     0a14000cf40fa910020040:
       name: RFX9100
     0a140083f3cf3510020070:
-      name: Dimmer Remote Mood 0
+      name: Dimmer Remote Mode 0
     0a140084f3cf3510030070:
-      name: Dimmer Remote Mood 1
+      name: Dimmer Remote Mode 1
     0a140087f3cf3510040070:
-      name: Dimmer Remote Mood 2
+      name: Dimmer Remote Mode 2
     0a140086f3cf3510050070:
-      name: Dimmer Remote Mood 3
+      name: Dimmer Remote Mode 3
