--- a/device_tracker.yaml
+++ b/device_tracker.yaml
@@ -25,11 +25,14 @@
 #  username: root
 #  password: XXXX
 
-- platform: unifi
-  host: cyclops
-  username: viewer
-  password: !secret unifi_password
-  verify_ssl: false
+## Needs either a valid cert or set
+##  PYTHONWARNINGS="ignore:Unverified HTTPS request"
+##
+#- platform: unifi
+#  host: cyclops
+#  username: viewer
+#  password: !secret unifi_password
+#  verify_ssl: false
 
 - platform: tado
   username: !secret tado_username
