--- a/packages/armoury/package.yaml
+++ b/packages/armoury/package.yaml
@@ -3,6 +3,7 @@ group: !include groups.yaml
 #climate: !include climate.yaml
 #input_select: !include input_select.yaml
 #scene: !include scenes.yaml
-sensor: !include sensors.yaml
+## Taking too long
+#sensor: !include sensors.yaml
 #switch: !include switches.yaml
 automation: !include_dir_merge_list automations
