--- a/people/anne.yaml
+++ b/people/anne.yaml
@@ -1,6 +1,7 @@
 name: "Anne"
 entities:
 - device_tracker.anne_phone
+- device_tracker.anne_iphone3
 - device_tracker.anne_iphone2
 - device_tracker.anne_iphone2_bt
 - device_tracker.anne_laptop
