--- a/groups.yaml
+++ b/groups.yaml
@@ -11,10 +11,10 @@ bedrooms:
   entities:
   - group.bedroom_mark_compact_ui
   - group.bedroom_jerome_compact_ui
-  - group.bedroom_ros_compact_ui
+  - group.bedroom_annex2_compact_ui
   - group.guest_room_compact_ui
   - sensor.bedroom_mark_temperature
-  - sensor.bedroom_ros_mean_temperature
+  - sensor.bedroom_annex2_mean_temperature
   - sensor.bedroom_jerome_mean_temperature
   - sensor.js_bedroom_humidity
   - sensor.guest_room_mean_temperature
@@ -120,7 +120,7 @@ annex_heating_demand:
   entities:
   - switch.study_demand
   - switch.annex_hall_demand
-  - switch.bedroom_ros_demand
+  - switch.bedroom_annex2_demand
 
 room_modes:
   name: Rooms
@@ -136,7 +136,7 @@ bedroom_modes:
   entities:
   - input_select.bedroom_mark_mode
   - input_select.bedroom_jerome_mode
-  - input_select.bedroom_ros_mode
+  - input_select.bedroom_annex2_mode
   - input_select.guest_room_mode
 
 user_automations:
@@ -179,7 +179,7 @@ batteries:
   - sensor.ballroom_east_battery
   - sensor.kitchen_battery
   - sensor.annex_hall_battery
-  - sensor.bedroom_ros_battery
+  - sensor.bedroom_annex2_battery
   - sensor.guest_room_battery
 
 dash_buttons:
@@ -250,7 +250,7 @@ temperatures:
   - sensor.study_east_current_temperature
   - sensor.study_west_current_temperature
   - sensor.js_bedroom_temperature
-  - sensor.bedroom_ros_current_temperature
+  - sensor.bedroom_annex2_current_temperature
 
 thermostat_devices:
   name: Thermostat Devices
@@ -271,7 +271,7 @@ thermostat_devices:
   - climate.study_west_comfort_setpoint
   - climate.guest_room_heat
   - climate.danfoss_z_thermostat_014g0013_heating_1
-  - climate.bedroom_ros_comfort_setpoint
+  - climate.bedroom_annex2_comfort_setpoint
   - climate.js_bedroom
 
 # Front-end thermostats
@@ -290,7 +290,7 @@ thermostats:
   - climate.study_thermostat
   - climate.guest_room_thermostat
   - climate.bedroom_jerome_thermostat
-  - climate.bedroom_ros_thermostat
+  - climate.bedroom_annex2_thermostat
 
 network: !include network.yaml
 
