--- a/history.yaml
+++ b/history.yaml
@@ -28,7 +28,7 @@ include:
     - sensor.study_east_temperature
     - sensor.study_west_temperature
     - sensor.js_bedroom_temperature
-    - sensor.bedroom_ros_temperature
+    - sensor.bedroom_annex2_temperature
     - sensor.main_heating_thermostat_battery
     - sensor.annex_heating_thermostat_battery
     - sensor.hall_multisensor_battery
@@ -43,7 +43,7 @@ include:
     - sensor.ballroom_east_battery
     - sensor.kitchen_battery
     - sensor.annex_hall_battery
-    - sensor.bedroom_ros_battery
+    - sensor.bedroom_annex2_battery
     - sensor.guest_room_battery
     - sensor.aeotec_dsb05_multisensor_luminance
     - sensor.aeotec_dsb05_multisensor_relative_humidity
