--- a/packages/bedroom-annex2/homeassistant.yaml
+++ b/packages/bedroom-annex2/homeassistant.yaml
@@ -1,23 +1,23 @@
 customize:
-  sensor.bedroom_ros_temperature:
+  sensor.bedroom_annex2_temperature:
     friendly_name: "Ros's Bedroom"
-  sensor.bedroom_ros_battery:
+  sensor.bedroom_annex2_battery:
     friendly_name: "Ros's Bedroom Battery"
     icon: mdi:battery
 
-  climate.bedroom_ros_thermostat:
+  climate.bedroom_annex2_thermostat:
     friendly_name: "Ros's Bedroom"
-  climate.bedroom_ros_comfort_setpoint:
+  climate.bedroom_annex2_comfort_setpoint:
     min_temp: 5
     max_temp: 25
 
-  script.hue_bedroom_ros_thermostat:
+  script.hue_bedroom_annex2_thermostat:
     friendly_name: "Ros's Bedroom Thermostat"
 
-  script.hue_bedroom_ros_off:
+  script.hue_bedroom_annex2_off:
     friendly_name: "Ros's Bedroom"
-  script.hue_bedroom_ros_sleep:
+  script.hue_bedroom_annex2_sleep:
     friendly_name: "Ros's Bedroom Mode Sleep"
-  script.hue_bedroom_ros_cosy:
+  script.hue_bedroom_annex2_cosy:
     friendly_name: "Ros's Bedroom Mode Cosy"
 
