--- a/packages/bedroom-annex2/scripts/hue-thermostat.yaml
+++ b/packages/bedroom-annex2/scripts/hue-thermostat.yaml
@@ -1,7 +1,7 @@
-hue_bedroom_ros_thermostat:
+hue_bedroom_annex2_thermostat:
   sequence:
     - service: climate.set_temperature
       data_template:
         temperature: "{{ requested_level }}"
-        entity_id: climate.bedroom_ros_thermostat
+        entity_id: climate.bedroom_annex2_thermostat
 
