--- a/zwave_device_config.yaml
+++ b/zwave_device_config.yaml
@@ -31,7 +31,7 @@ sensor.kitchen_temperature:
 sensor.annex_hall_temperature:
   polling_intensity: 5
   ignored: false
-sensor.bedroom_ros_temperature:
+sensor.bedroom_annex2_temperature:
   polling_intensity: 5
   ignored: false
 sensor.guest_room_temperature:
