--- a/packages/bedroom-annex2/homeassistant.yaml
+++ b/packages/bedroom-annex2/homeassistant.yaml
@@ -1,23 +1,23 @@
 customize:
   sensor.bedroom_annex2_temperature:
-    friendly_name: "Ros's Bedroom"
+    friendly_name: "Annex Bedroom 2"
   sensor.bedroom_annex2_battery:
-    friendly_name: "Ros's Bedroom Battery"
+    friendly_name: "Annex Bedroom 2 Battery"
     icon: mdi:battery
 
   climate.bedroom_annex2_thermostat:
-    friendly_name: "Ros's Bedroom"
+    friendly_name: "Annex Bedroom 2"
   climate.bedroom_annex2_comfort_setpoint:
     min_temp: 5
     max_temp: 25
 
   script.hue_bedroom_annex2_thermostat:
-    friendly_name: "Ros's Bedroom Thermostat"
+    friendly_name: "Annex Bedroom 2 Thermostat"
 
   script.hue_bedroom_annex2_off:
-    friendly_name: "Ros's Bedroom"
+    friendly_name: "Annex Bedroom 2"
   script.hue_bedroom_annex2_sleep:
-    friendly_name: "Ros's Bedroom Mode Sleep"
+    friendly_name: "Annex Bedroom 2 Mode Sleep"
   script.hue_bedroom_annex2_cosy:
-    friendly_name: "Ros's Bedroom Mode Cosy"
+    friendly_name: "Annex Bedroom 2 Mode Cosy"
 
