--- a/packages/bedroom-annex2/package.yaml
+++ b/packages/bedroom-annex2/package.yaml
@@ -6,4 +6,4 @@ scene: !include scenes.yaml
 script: !include_dir_merge_named scripts
 sensor: !include sensors.yaml
 #switch: !include switches.yaml
-automation: !include_dir_merge_list automations
+#automation: !include_dir_merge_list automations
