Add bedroom_annex2 to common automation calendar

--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -38,6 +38,8 @@
           #{%   set u = "annex_hall" %}
           {% elif "guestroom" in l or "guest" in l %}
           {%   set u = "guest_room" %}
+          {% elif "bedroom_annex2" in l or "annex2" in l or ("annex" in l and "bedroom2" in l) %}
+          {%   set u = "bedroom_annex2" %}
           {% endif %}
           input_select.{{u}}_select
         option: >
@@ -74,6 +76,8 @@
           {%   set u = "annex_hall" %}
           {% elif "guestroom" in l or "guest" in l %}
           {%   set u = "guest_room" %}
+          {% elif "bedroom_annex2" in l or "annex2" in l or ("annex" in l and "bedroom2" in l) %}
+          {%   set u = "bedroom_annex2" %}
           {% endif %}
           climate.{{u}}_thermostat
         temperature: >
