--- a/automation/calendar.yaml
+++ b/automation/calendar.yaml
@@ -39,7 +39,7 @@
           {% elif "guestroom" in l or "guest" in l %}
           {%   set u = "guest_room" %}
           {% endif %}
-          input_select.{{u}}_select
+          input_select.{{u}}_mode
         option: >
           {% set v = trigger.to_state.attributes.message.lower().split()|last %}
           {{ v[0].upper() ~ v[1:].lower() }}
