--- a/packages/bedroom-jerome/automations/calendar.yaml
+++ b/packages/bedroom-jerome/automations/calendar.yaml
@@ -11,7 +11,7 @@
           {% if "jerome" in l %}
           {%   set u = "bedroom_jerome" %}
           {% endif %}
-          input_select.{{u}}_select
+          input_select.{{u}}_mode
         option: >
           {% set v = trigger.to_state.attributes.message.lower().split()|last %}
           {{ v[0].upper() ~ v[1:].lower() }}
