--- a/groups.yaml
+++ b/groups.yaml
@@ -225,11 +225,13 @@ media_players:
   entities:
     - media_player.study
     - media_player.lounge
-    - media_player.kitchen
+    # kitchen
+    - media_player.outside_amplifier_zone_2
     - media_player.library
     - media_player.ballroom
     - media_player.ballroom_amplifier
     - media_player.bedroom_mark
+    - media_player.outside_amplifier
 
 temperatures:
   name: Temperatures
