--- a/packages/kitchen/homeassistant.yaml
+++ b/packages/kitchen/homeassistant.yaml
@@ -23,3 +23,6 @@ customize:
     friendly_name: "Kitchen Mode Cosy"
   script.hue_kitchen_bright:
     friendly_name: "Kitchen Mode Bright"
+
+  media_player.outside_amplifier_zone_2:
+    friendly_name: Kitchen Amplifier
