--- a/packages/kitchen/scenes.yaml
+++ b/packages/kitchen/scenes.yaml
@@ -2,8 +2,11 @@
   entities:
     group.kitchen_lights:
       state: off
-    media_player.kitchen:
+    media_player.kitchen_speaker:
       state: paused
+    ## Leave it on for now
+    #media_player.kitchen_amplifier:
+    #  state: off
     media_player.snapcast_client_kitchen2:
       is_volume_muted: true
 
@@ -12,9 +15,13 @@
     group.kitchen_lights:
       state: on
       brightness_pct: 50
+    media_player.outside_amplifier_zone_2:
+      state: on
 
 - name: kitchen_bright
   entities:
     group.kitchen_lights:
       state: on
       brightness_pct: 100
+    media_player.outside_amplifier_zone_2:
+      state: on
