--- a/packages/multiroom_audio.yaml
+++ b/packages/multiroom_audio.yaml
@@ -174,6 +174,10 @@ script:
         data:
           entity_id: media_player.outside_amplifier
           source: 'Media'
+      - service: media_player.select_source
+        data:
+          entity_id: media_player.outside_amplifier_zone_2
+          source: 'Kitchen Media'
 
 
   tts_broadcast:
